# learn-rust-web

./: Cargo.toml  questions.json  test.rest
src/: main.rs  profanity.rs  store.rs
src/errors/: mod.rs
src/routes/: answer.rs  question.rs
src/types/: answer.rs  pagination.rs  question.rs
