[package]
name = "learn_rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "migrate",
  "postgres",
] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }
warp = "0.3.6"
reqwest = { version = "0.11.23", features = ["json"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
